# fasterapi

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
